--- a/angular/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/angular/src/app/layout/dashboard/components/notification/notification.component.html
@@ -1,42 +1,42 @@
 <div class="card-body">
     <div class="list-group">
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-comment fa-fw"></i> New Comment
-            <span class="float-right text-muted small"><em>4 minutes ago</em></span>
+            Total consultant
+            <span class="float-right text-muted small"><em>326</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-            <span class="float-right text-muted small"><em>12 minutes ago</em></span>
+                > 12 months
+            <span class="float-right text-muted small"><em>115</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-envelope fa-fw"></i> Message Sent
-            <span class="float-right text-muted small"><em>27 minutes ago</em></span>
+                = 12 months  18 months
+            <span class="float-right text-muted small"><em>28</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-tasks fa-fw"></i> New Task
-            <span class="float-right text-muted small"><em>43 minutes ago</em></span>
+                > 18 months
+            <span class="float-right text-muted small"><em>183</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-upload fa-fw"></i> Server Rebooted
-            <span class="float-right text-muted small"><em>11:32 AM</em></span>
+                % > 12 m
+            <span class="float-right text-muted small"><em>35 %</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-bolt fa-fw"></i> Server Crashed!
-            <span class="float-right text-muted small"><em>11:13 AM</em></span>
+                % > 18 m
+            <span class="float-right text-muted small"><em>9%</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-warning fa-fw"></i> Server Not Responding
-            <span class="float-right text-muted small"><em>10:57 AM</em></span>
+                % > 24 m
+            <span class="float-right text-muted small"><em>56%</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
-            <span class="float-right text-muted small"><em>9:49 AM</em></span>
+                Total Tenure of all consultants @ BBH in current position (in months )
+            <span class="float-right text-muted small"><em>8920</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-money fa-fw"></i> Payment Received
-            <span class="float-right text-muted small"><em>Yesterday</em></span>
+                Average Tenure of consultant @ BBH in current position (in months )
+            <span class="float-right text-muted small"><em>27</em></span>
         </a>
     </div>
     <!-- /.list-group -->
-    <a href="#" class="btn btn-default btn-block">View All Alerts</a>
+    
 </div>
