--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -3,7 +3,7 @@
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
             <h1>BBH</h1>
-            <h2>PMO Dashboard</h2>
+            <h2>PMO 360<sup>&deg;</sup></h2>
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
