--- a/angular/src/styles/bootstrap/_tables.scss
+++ b/angular/src/styles/bootstrap/_tables.scss
@@ -7,6 +7,7 @@
   max-width: 100%;
   margin-bottom: $spacer;
   background-color: $table-bg; // Reset for nesting within parents with `background-color`.
+  font-size: 0.7rem;
 
   th,
   td {
