--- a/angular/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/angular/src/app/layout/dashboard/components/notification/notification.component.html
@@ -9,7 +9,7 @@
             <span class="float-right text-muted small"><em>115</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-                = 12 months  18 months
+            >= 12 months & < 18 months
             <span class="float-right text-muted small"><em>28</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
