--- a/angular/src/app/layout/form/form.component.html
+++ b/angular/src/app/layout/form/form.component.html
@@ -8,7 +8,7 @@
                 <fieldset class="form-group">
                     <label>Name</label>
                     <input class="form-control">
-                    <p class="help-block">Example block-level help text here.</p>
+                    <p class="help-block">Enter full name.</p>
                 </fieldset>
 
                 <fieldset class="form-group">
@@ -47,132 +47,132 @@
                 </div>
 
                 <div class="form-group">
-                    <label>Inline Checkboxes</label>
+                    <label>Skill Set : </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox">1
+                        <input type="checkbox">Java
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox">2
+                        <input type="checkbox">Mainfarme
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox">3
+                        <input type="checkbox">Testing
                     </label>
                 </div>
 
                 <fieldset class="form-group">
-                    <label>Radio Buttons</label>
+                    <label>Project Type</label>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked=""> Radio 1
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked=""> QA
                         </label>
                     </div>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"> Radio 2
+                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2"> IT
                         </label>
                     </div>
                     <div class="radio">
                         <label>
-                            <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3"> Radio 3
+                            <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3"> Support
                         </label>
                     </div>
                 </fieldset>
 
                 <fieldset class="form-group">
-                    <label>Inline Radio Buttons</label>
+                    <label>Project Config</label>
                     <label class="radio-inline">
-                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option1" checked="">1
+                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline1" value="option1" checked="">Staff Aug
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="option2">2
+                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="option2">SD
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option3">3
+                        <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline3" value="option3">Out come
                     </label>
                 </fieldset>
 
                 <div class="form-group">
-                    <label>Selects</label>
+                    <label>Projects</label>
                     <select class="form-control">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        <option>MFPS</option>
+                        <option>Fx Systems</option>
+                        <option>UAF</option>
+                        <option>Found Accounting</option>
+                        <option>CID</option>
                     </select>
                 </div>
 
                 <fieldset class="form-group">
-                    <label>Multiple Selects</label>
+                    <label>Skills</label>
                     <select multiple="" class="form-control">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
+                        <option>Java 1.8</option>
+                        <option>Angular JS</option>
+                        <option>Junit</option>
+                        <option>Spring</option>
+                        <option>Hibernate</option>
                     </select>
                 </fieldset>
 
-                <button type="submit" class="btn btn-secondary">Submit Button</button>
-                <button type="reset" class="btn btn-secondary">Reset Button</button>
+                <button type="submit" class="btn btn-secondary">Submit </button>
+                <button type="reset" class="btn btn-secondary">Reset </button>
 
             </form>
 
         </div>
         <div class="col-lg-6">
-            <h4>Disabled Form States</h4>
+            <h4>Location</h4>
 
             <form role="form">
 
                 <fieldset disabled="">
 
                     <div class="form-group">
-                        <label for="disabledSelect">Disabled input</label>
-                        <input class="form-control" id="disabledInput" type="text" placeholder="Disabled input" disabled="">
+                        <label for="disabledSelect">Location</label>
+                        <input class="form-control" id="disabledInput" type="text" placeholder="" disabled="">
                     </div>
 
                     <div class="form-group">
-                        <label for="disabledSelect">Disabled select menu</label>
+                        <label for="disabledSelect">SOW #</label>
                         <select id="disabledSelect" class="form-control">
-                            <option>Disabled select</option>
+                            <option>---</option>
                         </select>
                     </div>
 
-                    <div class="checkbox">
+                    <!--div class="checkbox">
                         <label>
                             <input type="checkbox"> Disabled Checkbox
                         </label>
-                    </div>
+                    </div-->
 
-                    <button type="submit" class="btn btn-primary">Disabled Button</button>
+                    <!--button type="submit" class="btn btn-primary">Disabled Button</button-->
 
                 </fieldset>
 
             </form>
             <br>
 
-            <h4>Form Validation</h4>
+            <h4>Billing details</h4>
 
             <form role="form">
 
                 <div class="form-group has-success">
-                    <label class="form-control-label" for="inputSuccess">Input with success</label>
+                    <label class="form-control-label" for="inputSuccess">Billing type</label>
                     <input type="text" class="form-control form-control-success" id="inputSuccess">
                 </div>
 
                 <div class="form-group has-warning">
-                    <label class="form-control-label" for="inputWarning">Input with warning</label>
+                    <label class="form-control-label" for="inputWarning">Billing role</label>
                     <input type="text" class="form-control form-control-warning" id="inputWarning">
                 </div>
 
                 <div class="form-group has-danger">
-                    <label class="form-control-label" for="inputError">Input with danger</label>
+                    <label class="form-control-label" for="inputError">Budget Type</label>
                     <input type="text" class="form-control form-control-danger" id="inputError">
                 </div>
 
             </form>
 
-            <h4>Input Groups</h4>
+            <!--h4>Input Groups</h4>
 
             <form role="form">
 
@@ -180,7 +180,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon1">@</span>
                     </div>
-                    <!-- <span class="input-group-addon">@</span> -->
+                    
                     <input type="text" class="form-control" placeholder="Username">
                 </div>
 
