--- a/angular/src/app/layout/tables/tables.component.html
+++ b/angular/src/app/layout/tables/tables.component.html
@@ -11,7 +11,7 @@
                         <thead>
                         <tr>
                             <th>#</th>
-                            <th>First Name</th>
+                            <th>First</th>
                             <th>Last Name</th>
                             <th>project</th>
                         </tr>
